--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -11,7 +11,7 @@
 
     <title>{% block title %}
 
-    {% endblock title %} | 93 Mobiles</title>
+    {% endblock title %} | Shop Name</title>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
   </head>
   <body>
@@ -19,7 +19,7 @@
 
     <nav class="navbar border-bottom fixed-top navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'home' %}">93 Mobiles</a>
+          <a class="navbar-brand" href="{% url 'home' %}">Shop Name</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -67,7 +67,7 @@
     <footer class="mt-5 pt-5 pb-3">
         <div class="row mx-4">
             <div class="col-md-4 col-12 text-md-left text-center">
-                <h2>93 Mobiles</h2>
+                <h2>Shop Name</h2>
                 <p>Address: near</p>
             </div>
 
