--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -11,7 +11,7 @@
     <div class="row mx-4 pb-5">
         <div class="col-md-5 col-12 order-md-1 order-2 my-auto pt-5">
             <p class="top_line">iPhone sellers</p>
-            <h1>93 Mobiles</h1>
+            <h1>Shop Name</h1>
             <p><small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi incidunt,
                 image-removebg-preview nam nostrum recusandae omnis enim hic optio repellat eligendi, officiis repellendus. Sapiente eveniet minus ipsam.</small></p>
 
